HelloUltraviolet/Fixtures/RejectedSource/Procedures/SelfTypeDefinition/Expected.uv
//! Expected diagnostic metadata for the SelfTypeDefinition rejected-source specimen.

expectedDiagnostic("E-TYP-1912", "def.15.SelfType")
